[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yurtle-rdflib"
version = "0.1.0"
description = "RDFlib plugin for Yurtle format (Markdown with Turtle/YAML frontmatter)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Hank Huang", email = "hank@nusy.ai" }]
requires-python = ">=3.9"
dependencies = ["rdflib>=6.0.0", "pyyaml>=6.0"]
keywords = ["rdf", "rdflib", "yurtle", "markdown", "turtle", "knowledge-graph", "semantic-web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Database :: Database Engines/Servers",
]

[project.urls]
Homepage = "https://github.com/hankh95/yurtle-rdflib"
Documentation = "https://github.com/hankh95/yurtle-rdflib#readme"
Repository = "https://github.com/hankh95/yurtle-rdflib"
Changelog = "https://github.com/hankh95/yurtle-rdflib/blob/main/CHANGELOG.md"
"Yurtle Spec" = "https://github.com/hankh95/yurtle"

[project.entry-points."rdflib.plugins.parser"]
yurtle = "yurtle_rdflib:YurtleRDFlibParser"

[project.entry-points."rdflib.plugins.serializer"]
yurtle = "yurtle_rdflib:YurtleRDFlibSerializer"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yurtle_rdflib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["yurtle_rdflib"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # Line too long - handled by black

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
